# ml-experiments

./: .gitignore  ARCHITECTURE.md  HIERARCHICAL_ATTENTION.md  README.md  TECHNICAL.md  config  dump_source.py  pyproject.toml  requirements.txt
docs/: RIPPLE_ARCHITECTURE.md  data-sources.md
docs/plans/: 2026-01-17-heuristic-secrets-design.md  2026-01-17-phase1-pytorch-prototype.md  2026-01-17-training-data-implementation.md  2026-01-17-training-data-pipeline-design.md
docs/research/: fast_diffusion_methods.md  mamba3_implementation.md
scripts/: arch_search_line_filter.py  bench_crossover.py  bench_scatter_vs_attn.py  benchmark_scatter_attention.py  bytemasker_arch_search.py  diagnose_gather_mem.py  diagnose_gatherconv.py  diagnose_telephone.py  distill_1d.py  eval_checkpoints.py  evaluate_pipeline.py  generate_pathx.py  heuristic_search.py  inspect_kernels.py  mine_hard_negatives.py  profile_ripple.py  test_jacobi_ssm.py  test_triton_kernels.py  train_bytemasker.py  train_ensemble.py  train_joint.py  train_line_filter.py  train_mnist_cifar.py  train_pathx.py  train_pruned.py  train_spanfinder.py  train_validator.py  train_vision_2d.py
src/heuristic_secrets/: __init__.py  io.py
tests/: test_io.py  test_pipeline_integration.py  test_public_api.py
tests/data/: test_build.py  test_collector.py  test_git_utils.py  test_integration.py  test_pipeline.py  test_registry.py
tests/models/: test_triton_telephone.py
tests/pipeline/: test_assembler.py  test_chunker.py  test_detector.py
tests/spanfinder/: test_model.py  test_train.py
tests/validator/: test_features.py  (+2 more)
(+63 files in other folders)
